# RedNote-Insight

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  api.py  app.py  docker-compose.yml  generate_data.py  import_data.py  packages.txt  pyproject.toml  requirements.txt  run.bat  run.sh  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 001_initial.py
data/chroma_db/: chroma.sqlite3
data/raw/: box_01.md  box_02.md  box_03.md  box_04.md  box_05.md  box_06.md  box_07.md  cixi_01.md  cixi_02.md  cixi_03.md  cixi_04.md  cixi_05.md  cixi_06.md  cixi_07.md  cixi_08.md  deco_01.md  deco_02.md  deco_03.md  deco_04.md  deco_05.md  deco_06.md  deco_07.md  dorm_01.md  dorm_02.md  dorm_03.md  dorm_04.md  dorm_05.md  dorm_06.md  dorm_07.md  scent_01.md  scent_02.md  scent_03.md  scent_04.md  scent_05.md  scent_06.md  store_01.md  store_02.md  store_03.md  store_04.md  store_05.md  (+103 more)
scripts/: export_cookies.py
src/: __init__.py  config.py  crawler.py  evaluation.py  fetcher.py  graph.py  ingestion.py  logger.py  mcp_tools.py  rag_pipeline.py  real_crawler.py  retrievers.py  runtime.py
src/agents/: __init__.py  comment_agent.py  creator_agent.py  demand_agent.py  insight_agent.py  supervisor.py
src/api/: __init__.py  dependencies.py  main.py
src/api/routes/: crawl.py  evaluate.py  health.py  insight.py  insight_stream.py  inspiration.py  opportunities.py  qa.py  qa_stream.py  trending.py
src/core/: __init__.py  database.py  observability.py  prompt_loader.py  query_utils.py  state.py
src/data/: inspiration.py
src/prompts/: creator_report_v1.yaml  gen_answer_v1.yaml  gen_answer_v2.yaml  insight_report_v2.yaml  rewrite_query_v1.yaml  rewrite_query_v2.yaml  supervisor_v1.yaml
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: test_demand_agent.py
tests/test_agents/: test_insight_agent.py  test_supervisor.py
tests/test_api/: test_health.py  test_insight.py  test_qa.py
