[project]
name = "rednote-insight"
version = "0.3.0"
description = "小红书爆款雷达 — 翻评论、找痛点、定方向，用 AI 从评论区挖出下一个爆款"
requires-python = ">=3.10"

dependencies = [
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-openai>=0.2",
    "langchain-chroma>=0.2",
    "langchain-text-splitters>=0.3",
    "chromadb>=0.5",
    "rank-bm25>=0.2",
    "jieba>=0.42",
    "sentence-transformers>=3.0",
    "python-dotenv>=1.0",
    "langgraph>=0.2.0",
    "streamlit>=1.40",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "ragas>=0.4.3",
    "datasets>=5.0.0",
    "mcp>=1.27.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "drissionpage>=4.1.1.4",
]
