[project]
name = "rednote-insight"
version = "1.0.0"
description = "小红书爆款雷达 — 翻评论、找痛点、定方向，用 AI 从评论区挖出下一个爆款"
requires-python = ">=3.10"

dependencies = [
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-openai>=0.2",
    "langchain-chroma>=0.2",
    "langchain-text-splitters>=0.3",
    "chromadb>=0.5",
    "rank-bm25>=0.2",
    "jieba>=0.42",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "drissionpage>=4.1.1.4",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "structlog>=26.1.0",
    "slowapi>=0.1.9",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "sentence-transformers>=3.0",
    "mcp>=1.27.2",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
